02-dockercoin/k8s/01-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels: 
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
              memory: "128Mi"
              cpu: "500m"
