02-dockercoin/k8s/07-rng-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rng
spec:
  selector:
    app: rng
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
