02-dockercoin/k8s/08-hasher.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasher
spec:
  selector:
    app: hasher
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
