02-dockercoin/k8s/09-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  selector:
    app: webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
