02-dockercoin/k8s/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dockercoins-webui
spec:
  rules:
  - host: dockercoins.fabiogomez.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webui
              port:
                number: 80
  ingressClassName: nginx
